--- a/views/project_edit.erb
+++ b/views/project_edit.erb
@@ -3,9 +3,9 @@
 <div class="container">
   <h2>Edit Project</h2>
   <form action="" method="POST">
-    <label><b>Name:</b></label>
+    <label>Name:</label>
     <input type="text" name="name" value="<%= @project.name %>" />
-    <label><b>Part number prefix:</b></label>
+    <label>Part number prefix:</label>
       <input type="text" name="part_number_prefix" value="<%= @project.part_number_prefix %>" />
     <label><input type="submit" class="btn btn-primary btn-medium" value="Save" /></label>
   </form>
