--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,3 +1,6 @@
+label {
+  font-weight: bold;
+}
 .label {
   cursor: default;
 }
@@ -73,4 +76,7 @@
 }
 .priority-2 {
   background-color: #aaa;
+}
+.table th a {
+  color: black;
 }
