--- a/views/change_password.erb
+++ b/views/change_password.erb
@@ -3,11 +3,11 @@
 <div class="container">
   <h2>Change Password</h2>
   <form action="" method="POST">
-    <label style="font-weight:bold;">Old Password</label>
+    <label>Old Password</label>
     <input type="password" name="old_password" />
-    <label style="font-weight:bold;">New Password</label>
+    <label>New Password</label>
     <input type="password" name="password" />
-    <label style="font-weight:bold;">Verify Password</label>
+    <label>Verify Password</label>
     <input type="password" name="password2" />
     <label>
       <input type="submit" class="btn btn-primary btn-medium" value="Save"
