Moved configurable options and credentials into the Rakefile.

--- a/views/header.erb
+++ b/views/header.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Team 254 Part Management System</title>
+  <title>Cheesy Parts</title>
   <link rel="icon" href="http://team254.com/wp-content/themes/cheesypoof2013/icons/favicon.ico">
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">Team 254 Parts</a>
+        <a class="brand" href="/">Cheesy Parts</a>
         <div class="nav-collapse collapse">
           <% if @user %>
             <ul class="nav">
