--- a/views/header.erb
+++ b/views/header.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Cheesy Parts</title>
-  <link rel="icon" href="http://team254.com/wp-content/themes/cheesypoof2013/icons/favicon.ico">
+  <link rel="shortcut icon" href="http://media.team254.com/homepage/icons/favicon32.png">
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
   <script src="/js/jquery-1.8.3.min.js"></script>
