--- a/views/header.erb
+++ b/views/header.erb
@@ -29,6 +29,9 @@
               <li>
                 <a href="/dashboards"> <i class="icon-list-alt icon-black"></i> Dashboards</a>
               </li>
+              <li>
+                <a href="/orders"> <i class="icon-shopping-cart icon-black"></i> Orders</a>
+              </li>
               <% if @user.can_administer? %>
                 <li>
                   <a href="/users"> <i class="icon-th-list icon-black"></i> Users</a>
