--- a/views/pending_orders.erb
+++ b/views/pending_orders.erb
@@ -1,11 +1,16 @@
 <%= erb :header %>
 
 <div class="container">
-  <div class="pull-right" style="margin-top: 15px;">
-    <a href="/orders/new_item" class="btn btn-success btn-small">
-      <i class="icon-white icon-user"></i> New Item
-    </a>
-  </div>
+  <% if @show_new_item_form %>
+    <h2>New item</h2>
+    <%= erb :new_order_item %>
+  <% else %>
+    <div class="pull-right" style="margin-top: 15px;">
+      <a href="?new_item=true" class="btn btn-success btn-small">
+        <i class="icon-white icon-user"></i> New Item
+      </a>
+    </div>
+  <% end %>
   <% unless @no_vendor_order_items.empty? %>
     <h2>Unclassified items</h2>
     <%= erb :order_items_list, :locals => { :order_items => @no_vendor_order_items } %>
