--- a/views/header.erb
+++ b/views/header.erb
@@ -8,6 +8,12 @@
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
   <script src="/js/jquery-1.8.3.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script>
+    var vendors = [];
+    <% Order.all.map(&:vendor_name).to_set.each do |vendor| %>
+      vendors.push("<%= vendor %>");
+    <% end %>
+  </script>
   <script src="/js/js.js"></script>
 </head>
 <body>
