--- a/views/order_items_list.erb
+++ b/views/order_items_list.erb
@@ -1,5 +1,6 @@
 <table class="table table-striped table-condensed table-bordered">
   <tr>
+    <th>Vendor</th>
     <th>Quantity</th>
     <th>Part Number</th>
     <th>Description</th>
@@ -9,6 +10,7 @@
   </tr>
   <% order_items.each do |item| %>
     <tr>
+      <td><%= item.order.vendor_name rescue "" %></td>
       <td><%= item.quantity %></td>
       <td><%= item.part_number %></td>
       <td><%= item.description %></td>
