Added order statistics page.

--- a/views/orders_project_list.erb
+++ b/views/orders_project_list.erb
@@ -14,6 +14,9 @@
     <li><h4>
       <a href="/projects/<%= project.id %>/orders/complete"><%= project.name %> &ndash; Completed orders</a>
     </h4></li>
+    <li><h4>
+      <a href="/projects/<%= project.id %>/orders/stats"><%= project.name %> &ndash; Order statistics</a>
+    </h4></li>
   <% end %>
   </div>
 </div>
