--- a/views/header.erb
+++ b/views/header.erb
@@ -5,9 +5,11 @@
   <title>Cheesy Parts</title>
   <link rel="shortcut icon" href="http://media.team254.com/homepage/icons/favicon32.png">
   <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
   <script src="/js/jquery-1.8.3.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap-datepicker.js"></script>
   <script>
     var vendors = [];
     <% Order.all.map(&:vendor_name).to_set.each do |vendor| %>
