--- a/views/order.erb
+++ b/views/order.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <h2>
     <%= @order.vendor_name %>
-    <%= @order.ordered_at.strftime("%D") rescue "" %>
+    <%= @order.ordered_at.strftime("%F") rescue "" %>
   </h2>
   <%= erb :order_items_list, :locals => { :order_items => @order.order_items } %>
   <form action="/projects/<%= @project.id %>/orders/<%= @order.id %>/edit" method="POST">
@@ -26,7 +26,8 @@
     <label>Paid for by</label>
     <input type="text" name="paid_for_by" value="<%= @order.paid_for_by %>" />
     <label>Date ordered</label>
-    <input type="text" name="ordered_at" value="<%= @order.ordered_at %>" />
+    <input type="text" class="datepicker" data-date-format="yyyy-mm-dd" name="ordered_at"
+        value="<%= @order.ordered_at.strftime("%F") rescue "" %>"/>
     <label>Notes</label>
      <textarea name="notes" rows="3"><%= @order.notes %></textarea>
     <label><input type="submit" class="btn btn-primary btn-medium" value="Save" /></label>
