--- a/views/order_stats.erb
+++ b/views/order_stats.erb
@@ -1,7 +1,7 @@
 <%= erb :header %>
 
 <div class="container">
-  <h2>Order Statistics</h2>
+  <h2>Completed Order Statistics</h2>
   <table class="table table-striped table-condensed table-bordered">
     <tr>
       <th>Vendor</th>
