--- a/views/dashboards.erb
+++ b/views/dashboards.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="well">
-  <% Project.each do |project| %>
+  <% Project.reject { |project| project.hide_dashboards == 1 }.each do |project| %>
   <li><h4>
     <a href="/projects/<%= project.id %>/dashboard"><%= project.name %> &ndash; Parts in progress</a>
   </h4></li>
