Fixed some order links.

--- a/views/new_order_item.erb
+++ b/views/new_order_item.erb
@@ -18,7 +18,7 @@
       <td><input type="text" name="notes" style="width: 200px" /></td>
       <td>
         <input type="submit" value="Save" class="btn btn-primary btn-small">
-        <a href="/projects/<%= @project.id %>/orders/pending" class="btn btn-danger btn-small">
+        <a href="/projects/<%= @project.id %>/orders/open" class="btn btn-danger btn-small">
           <i class="icon-white icon-trash"></i>
         </a>
       </td>
