--- a/views/orders_project_list.erb
+++ b/views/orders_project_list.erb
@@ -12,13 +12,15 @@
       <a href="/projects/<%= project.id %>/orders/open"><%= project.name %> &ndash; Open orders</a>
     </h4></li>
     <li><h4>
-      <a href="/projects/<%= project.id %>/orders/ordered"><%= project.name %> &ndash; Ordered orders</a>
+      <a href="/projects/<%= project.id %>/orders/ordered"><%= project.name %> &ndash; Placed orders</a>
     </h4></li>
     <li><h4>
-      <a href="/projects/<%= project.id %>/orders/complete"><%= project.name %> &ndash; Completed orders</a>
+      <a href="/projects/<%= project.id %>/orders/complete"><%= project.name %> &ndash; Received orders</a>
     </h4></li>
     <li><h4>
-      <a href="/projects/<%= project.id %>/orders/stats"><%= project.name %> &ndash; Order statistics</a>
+      <a href="/projects/<%= project.id %>/orders/stats">
+        <%= project.name %> &ndash; Order totals and statistics
+      </a>
     </h4></li>
   <% end %>
   </div>
