Added link from any vendor cell to stats page.

--- a/views/order_items_list.erb
+++ b/views/order_items_list.erb
@@ -14,7 +14,11 @@
     </tr>
     <% order_items.each do |item| %>
       <tr id="order-item-<%= item.id %>">
-        <td><%= item.order.vendor_name rescue "" %></td>
+        <td>
+          <a href="/projects/<%= @project.id %>/orders/stats" style="color: black;">
+            <%= item.order.vendor_name rescue "" %>
+          </a>
+        </td>
         <td><%= item.quantity %></td>
         <td><%= item.part_number %></td>
         <td><%= item.description %></td>
