--- a/views/completed_orders.erb
+++ b/views/completed_orders.erb
@@ -7,7 +7,7 @@
       <%= order.ordered_at.strftime("%F") rescue "" %>
       <span class="label label-status-<%= order.status %>"><%= Order::STATUS_MAP[order.status] %></span>
     </h2></a>
-    <%= erb :order_items_list, :locals => { :order_items => order.order_items } %>
+    <%= erb :order_items_list, :locals => { :order_items => order.order_items, :order => order } %>
   <% end %>
 </div>
 
