Updated deployment and config for new VPS.

--- a/views/login.erb
+++ b/views/login.erb
@@ -5,7 +5,7 @@
     <div class="span4 offset4 well">
       <legend>Please Sign In</legend>
       <% unless WORDPRESS_AUTH_URL.empty? %>
-        <a href="http://www.team254.com/wp-login.php?redirect_to=<%= URI.encode("#{URL}#{@redirect}") %>"
+        <a href="http://www.team254.com/wp-login.php?redirect_to=<%= URI.encode("#{Config.base_address}#{@redirect}") %>"
             class="btn btn-primary btn-block">
           Click here to sign in with your team254.com account
         </a>
