--- a/views/header.erb
+++ b/views/header.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Cheesy Parts</title>
-  <link rel="shortcut icon" href="http://media.team254.com/homepage/icons/favicon32.png">
+  <link rel="shortcut icon" href="//media.team254.com/homepage/icons/favicon32.png">
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
   <link href='/css/css.css' rel='stylesheet' type='text/css' />
