--- a/views/part_edit.erb
+++ b/views/part_edit.erb
@@ -37,6 +37,7 @@
         </option>
       <% end %>
     </select>
+    <input type="text" disabled value="<%= @part.creator %>" />
     <label><input type="submit" class="btn btn-primary btn-medium" value="Save Part" /></label>
   </form>
 </div>
