--- a/views/part.erb
+++ b/views/part.erb
@@ -25,28 +25,39 @@
 
     <%= erb :parts_list, :locals => { :parts => Part.where(:parent_part_id => @part.id).order(@part_sort) } %>
   <% end %>
-  <table class="table table-striped table-condensed table-bordered" style="width: auto;">
-    <tr>
-      <td><b>Project</b></td>
-      <td><a href="/projects/<%= @part.project_id %>"><%= @part.project.name %></a></td>
-    </tr>
-    <tr><td><b>Part Number</b></td><td><%= @part.full_part_number %></td></tr>
-    <tr>
-      <td><b>Status</b></td>
-      <td>
-        <span class="label label-status-<%= @part.status %>"><%= Part::STATUS_MAP[@part.status] %></span>
-      </td>
-    </tr>
-    <tr><td><b>Notes</b></td><td><%= (@part.notes || "").gsub("\n", "<br />") %></td></tr>
-    <% if @part.type == "part" %>
-      <tr><td><b>Source material</b></td><td><%= @part.source_material %></td></tr>
-      <tr><td><b>Have material?</b></td><td><%= (@part.have_material == 1) ? "Yes" : "No" %></td></tr>
-      <tr><td><b>Material cut length</b></td><td><%= @part.cut_length %></td></tr>
+  <div class="row">
+    <div class="span4">
+      <table class="table table-striped table-condensed table-bordered" style="width: auto;">
+        <tr>
+          <td><b>Project</b></td>
+          <td><a href="/projects/<%= @part.project_id %>"><%= @part.project.name %></a></td>
+        </tr>
+        <tr><td><b>Part Number</b></td><td><%= @part.full_part_number %></td></tr>
+        <tr>
+          <td><b>Status</b></td>
+          <td>
+            <span class="label label-status-<%= @part.status %>"><%= Part::STATUS_MAP[@part.status] %></span>
+          </td>
+        </tr>
+        <tr><td><b>Notes</b></td><td><%= (@part.notes || "").gsub("\n", "<br />") %></td></tr>
+        <% if @part.type == "part" %>
+          <tr><td><b>Source material</b></td><td><%= @part.source_material %></td></tr>
+          <tr><td><b>Have material?</b></td><td><%= (@part.have_material == 1) ? "Yes" : "No" %></td></tr>
+          <tr><td><b>Material cut length</b></td><td><%= @part.cut_length %></td></tr>
+        <% end %>
+        <tr><td><b>Quantity required</b></td><td><%= @part.quantity %></td></tr>
+        <tr><td><b>Drawing created?</b></td><td><%= (@part.drawing_created == 1) ? "Yes" : "No" %></td></tr>
+        <tr><td><b>Priority</b></td><td><%= Part::PRIORITY_MAP[@part.priority] %></td></tr>
+      </table>
+    </div>
+    <% if CheesyCommon::Config.onshape %>
+      <div class="span4 onshape_image">
+        <a href='https://cad.onshape.com/documents/<%= @part.onshape_document %>/w/<%= @part.onshape_workspace %>/e/<%= @part.onshape_element %>' target=_blank>
+          <img src="/parts/<%= @part.id %>/img">
+        </a>
+      </div>
     <% end %>
-    <tr><td><b>Quantity required</b></td><td><%= @part.quantity %></td></tr>
-    <tr><td><b>Drawing created?</b></td><td><%= (@part.drawing_created == 1) ? "Yes" : "No" %></td></tr>
-    <tr><td><b>Priority</b></td><td><%= Part::PRIORITY_MAP[@part.priority] %></td></tr>
-  </table>
+  </div>
   <% if @user.can_edit? %>
     <div class="pull-right" style="margin-top: -40px;">
       <a href="/parts/<%= @part.id %>/edit" class="btn btn-primary btn-small">
